--- a/animation.css
+++ b/animation.css
@@ -1,9 +1,10 @@
-    *   {
+*   {
         margin: 0px;
         padding: 0px;
         box-sizing: border-box;
         font-size: 13px;
         font-family: 'Roboto', Helvetica, sans-serif;
+       
     }
     
     /* header */
@@ -20,7 +21,7 @@
     .second-pannel {
         height: 78px;
         position: sticky;
-        top: 0%;
+        top: 0;
     }
 
     .border{
@@ -81,13 +82,13 @@
         margin-top: -420px;
         font-weight: lighter;
     }
-    /* ANIMATION */
 
     .veer{
         animation-name: ltor;
         animation-duration: 0.9s;
         animation-timing-function: ease-in;
     }
+    
     @keyframes ltor{
         from{left: -50%;
             opacity: 0;
@@ -163,6 +164,7 @@
     }
 
     /* DESK */
+    
     #vice{
         color : #002147;
         font-size : 48px;
@@ -210,6 +212,12 @@
         border-radius: 10px;
         width: 25%;
         height: 410px;
+        transition: transform 0.5s ease;
+    }
+
+    .box1:hover , .box2:hover , .box3:hover ,.boxes1:hover , .boxes2:hover , .boxes3:hover , .boxes4:hover{
+        box-shadow: 10px 10px 10px #BDBDBD;
+        transform: scale(1.049);
     }
 
     .letter{
@@ -217,8 +225,8 @@
         border-top-left-radius: 10px;
         height: 70px;
         border-color: #ddd;
-        padding-left: 10px;
-        padding-top: 10px;
+        padding-left: 15px;
+        padding-top: 15px;
         background-color: #f5f5f5;
     }
 
@@ -297,6 +305,8 @@
         border-radius: 10px;
         width: 19%;
         height: 410px;
+        transition: transform 0.5s ease;
+        
     }
 
     .heading{
@@ -304,8 +314,8 @@
         border-top-left-radius: 10px;
         height: 70px;
         border-color: #ddd;
-        padding-left: 10px;
-        padding-top: 10px;
+        padding-left: 15px;
+        padding-top: 15px;
         background-color: #f5f5f5;
     }
 
