--- a/animation.css
+++ b/animation.css
@@ -1,4 +1,5 @@
 *   {
+        text-decoration: none;
         margin: 0px;
         padding: 0px;
         box-sizing: border-box;
@@ -44,7 +45,7 @@
         height: 25px;
         width: 25px;
         text-align: center;
-        margin: 2px;
+        margin: 5px;
         font-size: 12px;
         color : #337ab7;
     }
@@ -59,6 +60,7 @@
         color : #337ab7;
         margin-right: 19px;
         font-weight: 600;
+        font-size: 14px;
     }
 
     /*MAIN*/
@@ -139,6 +141,10 @@
         }
     }
 
+    .but-img:hover{
+        background: #fdc800;
+        color :#212121
+    }
     .service{
         position: relative;
         display: flex;
@@ -216,7 +222,7 @@
     }
 
     .box1:hover , .box2:hover , .box3:hover ,.boxes1:hover , .boxes2:hover , .boxes3:hover , .boxes4:hover{
-        box-shadow: 10px 10px 10px #BDBDBD;
+        box-shadow: 10px 10px 10px #BEBEBE;
         transform: scale(1.049);
     }
 
